add name column to user entity, use UserDTO
